Fix captcha alignment

--- a/src/scss/web-components/_web-subscribe.scss
+++ b/src/scss/web-components/_web-subscribe.scss
@@ -23,5 +23,7 @@ web-subscribe {
 
   .g-recaptcha {
     height: 78px;
+    width: max-content;
+    margin-inline: auto;
   }
 }
